fix: IconPicker dark mode

--- a/src/component/form/IconPicker.module.sass
+++ b/src/component/form/IconPicker.module.sass
@@ -6,9 +6,12 @@
   border-radius: 10px
   width: 250px
   gap: 10px
+  background: var(--background)
+  color: var(--color)
 
   input
     background: var(--surface)
+    color: var(--color)
     outline: none
     border: none
     text-align: center
